turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:12: error: not found: value foward
  foward(20);
  ^